# SDL3

./: .clang-tidy  .gitignore  CMakeLists.INTRO-emscripten.txt  CMakeLists.SDL_image.txt  CMakeLists.c++.txt  CMakeLists.emscripten.txt  CMakeLists.hello.txt  CMakeLists.ok.txt  CMakeLists.simple.txt  CMakeLists.txt  CMakeLists.txt.INTRO-cmake.md  CMakeLists.wip.txt  Hello.md  Microsoft.PowerShell_profile.ps1  README.md  checkers.cpp  clang command lines windows.txt  clang_command_lines_windows.txt  emscripten.html  hello.c  hello.cpp  hello.so.cpp  hello.so2.cpp  hello.so3.cpp  hello.touch.cpp  hello_simple.html  pythemsc.bat  woodeneye-008.touch.c  work.md
SDL3_emsdk/: cmake.txt
blender/: alphacube.blend  blender settings.txt  checkers.blend  checkers.blend1  cylinder.blend1  cylinder.glb  cylinder.gold.blend  cylinder.gold.blend1  cylinder.orig.blend  cylinder.purp.blend  cylinder1.blend1
checkers/: CMakeLists.shared.txt  CMakeLists.txt  checkers.cpp  draw.cpp
checkers/emscripten/: CMakeLists.txt  checkers.html  checkers_cust.js  index.html
checkers/include/: board.h  common.h  draw.h
checkers/src/: CMakeLists.txt  board.cpp  checkers.cpp  draw.cpp
checkers_clang/: CMakeLists.shared.txt  CMakeLists.txt
checkers_emscripten/: CMakeLists.txt  index.html
emscripten/: CMakeLists.txt  index.html
hello/: CMakeLists.txt  hello.c  hello.cpp  so.md
hello/emscripten/: CMakeLists.txt
hello/hello_clang/: CMakeLists.txt
hello/hello_emscripten/: CMakeLists.txt  index.html
hellofs/: CMakeLists.txt  hellofs.c
hellofs/emscripten/: CMakeLists.txt  hellofs.html
helloworld/: CMakeLists.txt  helloworld.html
helloworld/emscripten/: CMakeLists.txt  helloworld.html
helloworld_minimal/: hello.cpp
helloworld_minimal/emscripten/: CMakeLists.txt  hello.html  hello_cust.js
helloworld_wasm/: CMakeLists.txt  hello_wasm.cpp
helloworld_wasm/emscripten/: CMakeLists.txt  hello_wasm.html  hello_wasm_cust.js
test_html5/: CMakeLists.txt
test_html5_hello/: CMakeLists.txt  hellofs.c  hellofs.html
